# frying-pan

./: README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.vue  base.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ItemSelect.vue  LargeButton.vue  LineEdit.vue  SelectPlatform.vue  StarterMenu.vue  TitleInfo.vue
src/components/edits/: AddressEdit.vue  NumberEdit.vue  TextEdit.vue
src/structs/: platforms.ts  run.ts
