[package]
name = "frying-pan"
version = "1.0.0"
description = "A Tauri App"
authors = ["FallingShrimp"]
edition = "2021"
[lib]
name = "frying_pan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
